--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul id="todo-list" class="list-group"></ul>
   </div>
 
-  <script src="/lab7/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
